--- a/Common/Common.csproj
+++ b/Common/Common.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConverterBytes.cs" />
-    <Compile Include="DataFormatter.cs" />
+    <Compile Include="DateFormatter.cs" />
     <Compile Include="MessageTypes.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SystemMessage.cs" />
